-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 8, 11, 15
-
Component/s: hotspot
-
b16
# Internal Error (/home/shade/trunks/jdk-jdk/src/hotspot/share/c1/c1_ValueMap.cpp:128), pid=21330, tid=21350
# assert(x->type()->tag() == f->type()->tag()) failed: should have same type
#
# JRE version: OpenJDK Runtime Environment (15.0) (fastdebug build 15-internal+0-adhoc.shade.jdk-jdk)
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 15-internal+0-adhoc.shade.jdk-jdk, mixed mode, sharing, tiered, compressed oops, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x6e2fd8] ValueMap::find_insert(Instruction*)+0x188
Steps to reproduce:
$ cd test/hotspot/jtreg/testlibrary/ctw
$ make
$ cd dist
<download attached JAR>
$ ./ctw.sh test.jar
test.jar contains the example class.
This is the debug log before the crash: GVN thinks LoadIndexed(int) equals to LoadIndexed(long).
$ JAVA_OPTIONS="-XX:+PrintValueNumbering -XX:CICompilerCount=2" ./ctw.sh ~/Desktop/test.jar
Value Numbering: LoadIndexed i43 equal to l20 (size 11, entries 6, nesting-diff 2)
Larger CTW runs identify similar crash in these methods:
com.android.ide.common.resources.LocaleManager::getLanguageCodes
com.google.common.primitives.UnsignedLongs::overflowInParse
com.google.protobuf.MessageReflection::mergeFieldFrom
edu.stanford.nlp.process.PTBEscapingProcessor::unprocess
org.netbeans.modules.schema2beans.AttrProp::toString
org.apache.xerces.jaxp.datatype.XMLGregorianCalendarImpl::checkFieldValueConstraint
org.aspectj.weaver.bcel.LazyMethodGen$BodyPrinter::printInstruction
org.sonar.sslr.internal.matchers.TextUtils::escape
org.streaminer.stream.membership.BloomCalculations::computeBucketsAndK
# assert(x->type()->tag() == f->type()->tag()) failed: should have same type
#
# JRE version: OpenJDK Runtime Environment (15.0) (fastdebug build 15-internal+0-adhoc.shade.jdk-jdk)
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 15-internal+0-adhoc.shade.jdk-jdk, mixed mode, sharing, tiered, compressed oops, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x6e2fd8] ValueMap::find_insert(Instruction*)+0x188
Steps to reproduce:
$ cd test/hotspot/jtreg/testlibrary/ctw
$ make
$ cd dist
<download attached JAR>
$ ./ctw.sh test.jar
test.jar contains the example class.
This is the debug log before the crash: GVN thinks LoadIndexed(int) equals to LoadIndexed(long).
$ JAVA_OPTIONS="-XX:+PrintValueNumbering -XX:CICompilerCount=2" ./ctw.sh ~/Desktop/test.jar
Value Numbering: LoadIndexed i43 equal to l20 (size 11, entries 6, nesting-diff 2)
Larger CTW runs identify similar crash in these methods:
com.android.ide.common.resources.LocaleManager::getLanguageCodes
com.google.common.primitives.UnsignedLongs::overflowInParse
com.google.protobuf.MessageReflection::mergeFieldFrom
edu.stanford.nlp.process.PTBEscapingProcessor::unprocess
org.netbeans.modules.schema2beans.AttrProp::toString
org.apache.xerces.jaxp.datatype.XMLGregorianCalendarImpl::checkFieldValueConstraint
org.aspectj.weaver.bcel.LazyMethodGen$BodyPrinter::printInstruction
org.sonar.sslr.internal.matchers.TextUtils::escape
org.streaminer.stream.membership.BloomCalculations::computeBucketsAndK
- duplicates
-
JDK-8317578 crash under -Xcomp option with Problematic frame: # V [libjvm.so+0x61dccb] methodHandle::methodHandle(Thread*, Method*)+0x2b
-
- Closed
-
-
JDK-8318886 assert(x->type()->tag() == f->type()->tag()) failed: should have same type
-
- Closed
-